refactored UserList component to a table with mat-drawer; added extra validation to the timeline

--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -127,7 +127,7 @@
         *ngIf="currentFormState !== FormClassState.Start && currentFormState !== FormClassState.Newbie && currentFormState !== FormClassState.ActiveSub">
         <mat-spinner *ngIf="currentFormState === FormClassState.Submit"></mat-spinner>
         <p class="submit__message" *ngIf="currentFormState === FormClassState.Success">
-            Ваше занятие зарегистрировано!
+            Ваша заявка отправлена!
         </p>
         <p class="submit__message"
             *ngIf="currentFormState === FormClassState.Success && prevFormState === FormClassState.Newbie">
