copyright in Contacts; UserList adjustments

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -22,13 +22,18 @@
             </div>
 
             <div class="flex-col center-all social-media">
-                <h4><span class="sigma-font">ΣΙΓΜΑ</span> в социальных сетях:</h4>
+                <!-- <span class="sigma-font"></span> -->
+                <h4>ΣΙΓΜΑ в социальных сетях:</h4>
                 <app-social-media></app-social-media>
             </div>
         </div>
 
         <div class="flex-col wrapper mapy-desktop">
             <app-mapycz class="w-h-100"></app-mapycz>
+        </div>
+
+        <div class="flex-row center-all copyright">
+            <span>website design and development by <a target="_blank" href="https://t.me/osmium_tetroxide">Osmium Tetroxide</a></span>
         </div>
     </div>
 </div>
