--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="flex-col gallery-text">
-            <div class="flex-col w-100 gallery-text__title andika-bold">
+            <div class="flex-col w-100 gallery-text__title">
                 <h3>Студия ΣΙΓΜΑ</h3>
             </div>
             <span class="gallery-text__description">
@@ -98,7 +98,7 @@
     <div class="flex-col center-row w-100 content-mobile" *ngIf="isMobile">
 
         <div class="flex-col w-100">
-            <div class="flex-col gallery-text__title andika-bold">
+            <div class="flex-col gallery-text__title">
                 <h3>Студия ΣΙΓΜΑ</h3>
             </div>
             <div class="gallery-thumbs">
@@ -128,7 +128,7 @@
         </ul>
 
         <div class="flex-col w-100">
-            <div class="flex-col reviews-text__title andika-bold">
+            <div class="flex-col reviews-text__title">
                 <h3>Что говорят студенты:</h3>
             </div>
             <div class="reviews-slides">
