--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="flex-col section">
-    <div class="flex-col plug">
+    <!-- <div class="flex-col plug">
         <h2></h2>
-    </div>
+    </div> -->
 
     <!-- For Desktop Version -->
     <div class="wrapper h-100 flex-row center-row desktop" *ngIf="!isMobile">
