--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,8 +1,9 @@
-.plug {
-  background: var(--brand-color);
-}
+// .plug {
+//   background: var(--brand-color);
+// }
 
 .wrapper {
+  margin-top: 4px;
   justify-content: space-between;
   gap: 4px;
   user-select: none;
