--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -18,6 +18,7 @@
     padding: 8vh 20px;
     background-color: var(--light-color);
     box-shadow: 0 0 4px var(--dark-alt-color);
+    margin-bottom: 2px;
 }
 
 .cards {
