--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -16,6 +16,7 @@
 .sidenav-container {
     height: 500px;
     border: 2px solid var(--brand-color);
+    background: #fff;
 }
 
 .student-drawer {
