created RequestsSevice & RequestsFirebaseSevice to handle Newbie requests; implemented these to NewClassForm; adjusted other logic there

--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -35,10 +35,13 @@
             <input class="input" type="text" formControlName="name" placeholder="Ваше имя" />
 
             <label class="label" for="phone">Телефон</label>
-            <input class="input" type="text" formControlName="phone" placeholder="Ваш телефон" />
-
+            <input class="input" type="text" formControlName="phone" placeholder="Укажите один или несколько способов связи" />
+            
             <label class="label" for="telegram">Telegram</label>
-            <input class="input" type="text" formControlName="telegram" placeholder="Ваш Telegram" />
+            <input class="input" type="text" formControlName="telegram" placeholder="Укажите один или несколько способов связи" />
+
+            <label class="label" for="telegram">e-mail</label>
+            <input class="input" type="text" formControlName="email" placeholder="Укажите один или несколько способов связи" />
 
             <label class="label" for="message">Комментарий</label>
             <textarea class="textarea" type="message" formControlName="message"
@@ -64,7 +67,7 @@
             </div>
 
             <label class="label" for="name">Имя</label>
-            <input class="input" type="text" formControlName="name" placeholder="Ваше имя" readonly />
+            <input class="input input_name" type="text" formControlName="name" placeholder="Ваше имя" readonly />
 
             <label class="label">
                 Дата и время
