--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -110,7 +110,6 @@ form {
         background: #fff;
         height: 20px;
         color: #000;
-        font-size: 16px;
     }
 
     .input {
@@ -120,8 +119,13 @@ form {
         border-radius: 4px;
         border: 1px solid #ccc;
 
+        &_name {
+            font-size: 16px;
+        }
+
         &_time {
             margin: 0;
+            font-size: 16px;
         }
     }
 
