--- a/src/app/components/delete-request/delete-request.component.html
+++ b/src/app/components/delete-request/delete-request.component.html
@@ -1,20 +1,27 @@
 <div class="flex-col newclass-form">
     <div class="flex-row center-row form-header">
-        <h2>Отмена занятия</h2>
+        <h2>Удалить заявку</h2>
         <div class="utility-btn" (click)="closeDialog()">
             <mat-icon>close</mat-icon>
         </div>
     </div>
 
     <mat-dialog-content>
-        <p>Вы уверены, что хотите отменить занятие?</p>
+
+        <p>Вы уверены, что хотите отменить заявку?</p>
+
         <div class="flex-row flex-grow item-to-delete">
-            {{ classItem.startdate | date:'dd.MM.yyyy HH:mm' }} - {{ classItem.enddate | date:'HH:mm' }}
+            Создана: {{ requestItem.date | date:'dd.MM.yyyy HH:mm' }}
         </div>
-        <p>{{ message }}</p>
+
+        <div class="flex-row flex-grow item-to-delete">
+            Имя: {{ requestItem.name }}
+        </div>
+
     </mat-dialog-content>
+
     <mat-dialog-actions align="end">
         <button mat-raised-button (click)="closeDialog()">Закрыть</button>
-        <button mat-raised-button color="warn" (click)="confirmCancel()">Подтвердить</button>
+        <button mat-raised-button color="warn" (click)="confirmDelete()">Подтвердить</button>
     </mat-dialog-actions>
 </div>
