--- a/src/app/components/request-list/request-list.component.scss
+++ b/src/app/components/request-list/request-list.component.scss
@@ -1,15 +1,23 @@
-.searchbar {
-    input {
-        padding: 8px;
-        background: #fff;
-        font-size: 1em;
-        border: 3px solid #000;
-        margin-bottom: 20px;
+mat-panel-title {
+    white-space: nowrap;
+}
 
-        &:read-only {
-            background: var(--light-color);
-        }
-    }
+mat-expansion-panel {
+    margin-top: 20px;
+    color: var(--light-color);
+}
+
+mat-expansion-panel-header {
+    background: var(--light-brand-color) !important;
+    height: 40px !important;
+    font-size: 18px;
+    border-radius: 0;
+}
+
+::ng-deep .mat-expansion-panel-body {
+    background: var(--light-color) !important;
+    color: #000;
+    padding: 0 !important;
 }
 
 // USER CARD
@@ -112,118 +120,10 @@ mat-divider {
     }
 }
 
-.special-group {
-    gap: 10px;
-}
-
-.membership-group {
-    width: 150px;
-    position: relative;
-
-    input {
-        flex: 1;
-        background: #fff !important;
-
-        &:disabled {
-            opacity: 0.7;
-        }
-    }
-
-    button {
-        padding: 6px;
-    }
-}
-
-.utility-btn {
+.delete-btn {
     cursor: pointer;
-    position: absolute;
-
-    mat-icon {
-        font-size: 24px;
-        opacity: 0.8;
-        transition:
-            transform 0.3s,
-            opacity 0.3s;
-
-        &:hover {
-            transform: scale(1.1);
-            opacity: 1;
-        }
-    }
-
-    &_details {
-        right: 0px;
-    }
-
-    &_class-edit {
-        top: 2px;
-        right: 42px;
-        background: var(--light-color);
-        height: 24px;
-        border-radius: 4px;
-    }
-
-    &_class-cancel {
-        top: 2px;
-        right: 2px;
-        background: var(--light-color);
-        height: 24px;
-        border-radius: 4px;
-    }
-}
-
-.classes-list {
-    padding: 4px;
-    border-radius: 4px;
-    background-color: var(--light-color);
-    gap: 4px;
-    min-height: 40px;
-}
-
-.my-classes {
-    &__item {
-        border-radius: 4px;
-        position: relative;
-
-        p {
-            margin: 0;
-        }
-
-        mat-divider {
-            margin: 0;
-        }
-    }
-
-    &__status {
-        padding: 4px 20px;
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        background: var(--bright-alt-color);
-        color: var(--light-color);
-
-        &_confirmed {
-            background-image: linear-gradient(to right, var(--light-brand-color), transparent);
-        }
-
-        &_cancelled {
-            background-image: linear-gradient(to right, var(--warn-color), transparent);
-        }
-
-        &_pending {
-            background-image: linear-gradient(to right, var(--alt-color), transparent);
-        }
-
-        &_executed {
-            background-image: linear-gradient(to right, var(--gray-color), transparent);
-        }
-    }
-
-    &__time {
-        padding: 4px 8px;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        background: var(--bright-alt-color);
-    }
+    width: 100%;
+    margin-top: 10px;
 }
 
 // MAIN CONTENT
