--- a/src/app/components/cancel-class/cancel-class.component.html
+++ b/src/app/components/cancel-class/cancel-class.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col newclass-form">
+<div class="flex-col dialog-form-wrapper">
     <div class="flex-row center-row form-header">
         <h2>Отмена занятия</h2>
         <div class="utility-btn" (click)="closeDialog()">
