--- a/src/app/components/admin-timeline/admin-timeline.component.scss
+++ b/src/app/components/admin-timeline/admin-timeline.component.scss
@@ -90,22 +90,15 @@ mat-form-field {
 }
 
 .utility-btn {
-    cursor: pointer;
-    z-index: 2;
+    position: absolute;
+    right: 0px;
+    height: 24px;
+    width: 24px;
 
     mat-icon {
         font-size: 24px;
-        opacity: 0.8;
-        position: absolute;
-        right: 0px;
-        transition:
-            transform 0.3s,
-            opacity 0.3s;
-
-        &:hover {
-            transform: scale(1.1);
-            opacity: 1;
-        }
+        height: 24px;
+        width: 24px;
     }
 }
 
