--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col newclass-form">
+<div class="flex-col dialog-form-wrapper">
     <div class="flex-row center-row form-header">
         <h2>Новое занятие</h2>
         <div class="utility-btn" (click)="closeDialog()">
