style fixes for better UE

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="flex-row center-all copyright">
-            <span>website design and development by <a target="_blank" href="https://t.me/osmium_tetroxide">Osmium Tetroxide</a></span>
+            <span>website design and development by <br class="mobile"><a target="_blank" href="https://t.me/osmium_tetroxide">Osmium Tetroxide</a></span>
         </div>
     </div>
 </div>
