--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -106,6 +106,7 @@ mat-label {
     margin-top: 10px;
     font-size: 12px;
     color: var(--dark-alt-color);
+    text-align: center;
 
     .privacy-terms {
         text-decoration: underline;
