--- a/src/app/components/request-list/request-list.component.scss
+++ b/src/app/components/request-list/request-list.component.scss
@@ -35,6 +35,10 @@ mat-divider {
         margin-top: 8px;
     }
 
+    a {
+        display: flex;
+    }
+
     input,
     textarea {
         font-family: Roboto, "Helvetica Neue", sans-serif;
