--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -48,6 +48,10 @@ mat-divider {
         margin-top: 8px;
     }
 
+    a {
+        display: flex;
+    }
+
     input,
     textarea {
         font-family: Roboto, "Helvetica Neue", sans-serif;
