--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -41,7 +41,7 @@
             <input class="input" type="text" formControlName="telegram" placeholder="Укажите один или несколько способов связи" />
 
             <label class="label" for="telegram">e-mail</label>
-            <input class="input" type="text" formControlName="email" placeholder="Укажите один или несколько способов связи" />
+            <input class="input" type="email" formControlName="email" placeholder="Укажите один или несколько способов связи" />
 
             <label class="label" for="message">Комментарий</label>
             <textarea class="textarea" type="message" formControlName="message"
