--- a/src/app/components/request-list/request-list.component.html
+++ b/src/app/components/request-list/request-list.component.html
@@ -33,19 +33,25 @@
                 <!-- Telegram -->
                 <div class="flex-col form-group" *ngIf="selectedRequest()?.telegram">
                     <label>telegram:</label>
-                    <input type="text" formControlName="telegram" readonly>
+                    <a target="_blank" href="{{ getTelegramLink(selectedRequest()?.telegram) }}">
+                        <input class="no-pointer-events flex-grow" type="text" formControlName="telegram" readonly>
+                    </a>
                 </div>
 
                 <!-- Phone -->
                 <div class="flex-col form-group" *ngIf="selectedRequest()?.phone">
                     <label>телефон:</label>
-                    <input type="text" formControlName="phone" readonly>
+                    <a href="tel:{{selectedRequest()?.phone}}">
+                        <input class="no-pointer-events flex-grow" type="text" formControlName="phone" readonly>
+                    </a>
                 </div>
 
                 <!-- Email -->
                 <div class="flex-col form-group" *ngIf="selectedRequest()?.email">
                     <label>email:</label>
-                    <input type="email" formControlName="email" readonly>
+                    <a href="mailto:{{selectedRequest()?.email}}">
+                        <input class="no-pointer-events flex-grow" type="email" formControlName="email" readonly>
+                    </a>
                 </div>
 
                 <!-- Message -->
